src/ui/features/execution/snapshots/terraleph__ui__features__execution__render__tests__preview_160x60_apply-long-address.snap
---
source: src/ui/features/execution/render.rs
expression: buffer_text(buffer)
---






 Terraleph | main

 ┌Applying────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
 │Applying...    Completed: 1/3    Elapsed: 2.0s                                                                                                              │
 │Failed: 0    Incomplete: 0    Skipped: 0    Previous: local success                                                                                         │
 │┌Targets *─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐│
 ││> All logs                                                                                                                                                ││
 ││  Resource                                                                                                Status     Action        Elapsed  Previous      ││
 ││  terraform_data.api                                                                                      Completed  update           1.0s     11.0s      ││
 ││  module.synthetic_platform.module.regional_workers["region-a"].terraform_data.worker_pool_configuration  Running    delete/create    2.0s        --      ││
 ││  terraform_data.new                                                                                      Pending    create             --        --      ││
 ││                                                                                                                                                          ││
 ││                                                                                                                                                          ││
 ││                                                                                                                                                          ││
 ││                                                                                                                                                          ││
 ││                                                                                                                                                          ││
 ││                                                                                                                                                          ││
 ││                                                                                                                                                          ││
 ││                                                                                                                                                          ││
 ││                                                                                                                                                          ││
 ││                                                                                                                                                          ││
 ││                                                                                                                                                          ││
 ││                                                                                                                                                          ││
 ││                                                                                                                                                          ││
 ││                                                                                                                                                          ││
 │└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│
 │┌Logs: All logs────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐│
 ││Waiting for Terraform output...                                                                                                                           ││
 ││                                                                                                                                                          ││
 ││                                                                                                                                                          ││
 ││                                                                                                                                                          ││
 ││                                                                                                                                                          ││
 ││                                                                                                                                                          ││
 ││                                                                                                                                                          ││
 ││                                                                                                                                                          ││
 ││                                                                                                                                                          ││
 ││                                                                                                                                                          ││
 ││                                                                                                                                                          ││
 ││                                                                                                                                                          ││
 ││                                                                                                                                                          ││
 ││                                                                                                                                                          ││
 ││                                                                                                                                                          ││
 ││                                                                                                                                                          ││
 ││                                                                                                                                                          ││
 ││                                                                                                                                                          ││
 │└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│
 └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 Ctrl-C cancel | Tab focus | End follow latest
