src/ui/features/execution/snapshots/terraleph__ui__features__execution__render__tests__preview_80x24_apply-success.snap
---
source: src/ui/features/execution/render.rs
expression: buffer_text(buffer)
---

 Terraleph | main

 ┌Apply result────────────────────────────────────────────────────────────────┐
 │Apply complete    Completed: 4/4    Elapsed: 4.0s                           │
 │Failed: 0    Incomplete: 0    Skipped: 0    Previous: local success         │
 │┌Targets *─────────────────────────────────────────────────────────────────┐│
 ││> All logs                                                                ││
 ││  Resource               Status     Action        Elapsed  Previous       ││
 ││  terraform_data.api     Completed  update           1.0s     11.0s       ││
 ││  terraform_data.worker  Completed  delete/create    1.0s        --       ││
 ││  terraform_data.old     Completed  delete           1.0s        --       ││
 ││  terraform_data.new     Completed  create           1.0s      4.0s       ││
 │└──────────────────────────────────────────────────────────────────────────┘│
 │┌Logs: All logs────────────────────────────────────────────────────────────┐│
 ││Warning: synthetic provider emitted a non-blocking diagnostic            ▲││
 ││Apply finished successfully.                                             │││
 ││Outputs: endpoint = synthetic                                            │││
 ││Apply log remains in receive order.                                      ┃││
 ││◀︎════════════════════════════════════════════════════────────────────────▶︎││
 │└──────────────────────────────────────────────────────────────────────────┘│
 └────────────────────────────────────────────────────────────────────────────┘
 q/Ctrl-C quit | Tab focus | y yank result
