src/ui/features/execution/snapshots/terraleph__ui__features__execution__render__tests__preview_80x24_plan-failure.snap
---
source: src/ui/features/execution/render.rs
expression: buffer_text(buffer)
---






 Terraleph | main

 ┌Failed──────────────────────────────────────────────────────────────────────┐
 │Terraform failed: Exited(1)                                                 │
 │Waiting 0s    Follow: On                                                    │
 │Elapsed 2.0s                                                                │
 │planning output                                                             │
 │synthetic plan failure                                                      │
 │────────────────────────────────────────────────────────────────────────────│
 └────────────────────────────────────────────────────────────────────────────┘
 q/Ctrl-C quit | y copy diagnostic
